Modernize Kotlin compiler invocation and execution handling
- Rename `kotlinc` internals to `kotlinCompiler` and unify executable resolution
- Add env vars, timeout, output consumer, and inherit I/O controls
- Replace manual `ProcessBuilder` logic with `ProcessExecutor` and fix resource cleanup
- Simplify arg file / path handling and improve logging